--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
 
 			<!-- block contactform -->
 			<section class="block contactform">
-				<form class="form" method="POST">
+				<form id="gform" class="form" method="POST" action="https://script.google.com/macros/s/AKfycbysd0iX61H2NAt6-GSW0dgMWZ_2URRX4kIX8fkOnQ/exec">
 					<label for="name">Naam</label>
 				    <input class="form-field" type="text" name="name" placeholder="Bv. Katja de Bruin" required>
 				    
