--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,6 @@
     			<div class="load-wrapper"><div class="spinner"><div class="bubble-1"></div><div class="bubble-2"></div></div></div><div class="overtake"></div>
 			</section>
 		</main>
-		<script type="text/javascript" src="js/build.js" async></script>
+		<script type="text/javascript" src="js/build.js" async defer></script>
 	</body>
 </html>
