--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
 			<section class="block testimonials"></section>
 
 			<!-- block contactform -->
-			<section class="block contactform">
+			<section class="block contactform">joo
 				<form id="gform" class="form" method="POST">
 					<label for="name">Naam</label>
 				    <input class="form-field" type="text" name="name" placeholder="Bv. Katja de Bruin" required>
