--- a/app/index.html
+++ b/app/index.html
@@ -50,52 +50,155 @@
 					<li><a href="/Trouwambtenaar">Trouwambtenaar</a></li>
 					<li><a href="/Bedrijfsoptredens" >Bedrijfsoptredens</a></li>
 					<li><a href="/Theaterproducties">Theaterproducties</a></li>
-					<li><a href="/Contact">Contact</a></li>
+					<li><a href="/Contact" class="button">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
-		<main class="main">
 
-			<!-- block hero -->
-			<div class="block hero">
+		<!-- block hero -->
+		<div class="block hero">
+			<div class="introduction">
 				<h1 class="title">Jelle Kuiper</h1>
 				<h2>Trouwambtenaar, Cabaretier, Theaterproducent</h2>
-				<p>jelle kan met recht een creatieve duizendpoot worden genoemd. Hij is cabaretier en verzorgt optredens op maat. Hij is officieel trouwambtenaar in heel Nederland. Ook is hij theaterproducent van o.a. de Buurman en Buurman voorstellingen en regisseert hij Stefano Keizers.</p>
+				<p>Jelle kan met recht een creatieve duizendpoot worden genoemd. Hij is cabaretier en verzorgt optredens op maat. Hij is officieel trouwambtenaar in heel Nederland. Ook is hij theaterproducent van o.a. de Buurman en Buurman voorstellingen en regisseert hij Stefano Keizers.</p>
 				<a class="button" href="/contact">Contact</a>
 			</div>
+			<picture class="hero-image">
+				<img src="img/scape4.jpg" alt="Jelle Kuiper">
+			</picture>
+		</div>
+
+		<main class="main">
 
 			<!-- block usp -->
-			<section class="block usp">
-				<p>
-					Wil je meer weten, een shoot plannen of eerst even kennis maken? Bel <a class="tel"></a> of stuur me een berichtje.
-				</p>
+			<section class="block usps">
+				<article class="usp">
+					<div class="picture">
+						<strong class="subtitle">Leuk trouwen</strong>
+						<p class="paragraph">Omdat standaard huwelijksceremonies best wat leuker en wat minder stijf kunnen heeft Jelle in 2005 besloten zijn cabarettalent hierop in te zetten. Sindsdien is hij buitengewoon ambtenaar van de burgerlijke stand. Hij zorgt dat jouw belangrijkste dag van je leven een unieke ervaring wordt, voor jullie én voor jullie gasten. De toon van jullie dag wordt gezet met een ontspannen en intieme ceremonie vol humor en interactie.</p>
+					</div>
+					<picture class="picture">
+						<img class="image" src="" alt="">
+					</picture>
+				</article>
+				<article class="usp">
+					<div class="picture">
+						<strong class="subtitle">Leuk trouwen</strong>
+						<p class="paragraph">Dus geen saai of truttig opgelezen verhaal van een trouwambtenaar dat bij elk bruidspaar hetzelfde is. Nee, Jelle maakt er een persoonlijk verhaal van en hij zorgt voor een trouwceremonie die alles behalve doorsnee is! Dus wil jij je gasten verrassen en zorgen dat er nog weken, maanden, jaren wordt nagepraat over jouw bruiloft? Stuur een bericht en Jelle neemt snel contact met je op.​​​​​​​​​​</p>
+					</div>
+					<picture class="picture">
+						<img class="image" src="" alt="">
+					</picture>
+				</article>
 			</section>
+
+			<section class="block video">
+				<iframe class="iframe" width="100%" height="100%" src="https://www.youtube.com/embed/sQZcXToH1CU?vq=hd720&modestbranding=1&showinfo=0&controls=0&rel=0&theme=light" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</section>
+
+			<!-- block usp -->
+			<section class="block usps">
+				<article class="usp">
+					<div class="picture">
+						<strong class="subtitle">Uit het juryrapport van de Dutch Wedding Awards:</strong>
+						<quote class="quote">"Deze trouwambtenaar doet iets met mensen. Je voelt je direct thuis bij hem; het is vertrouwd. Hij trekt de trouwceremonie niet naar zich toe alsof het zijn show is, maar het bruidspaar staat in het middelpunt van de belangstelling, TOP"</quote>
+					</div>
+					<picture class="picture">
+						<img class="image" src="" alt="">
+					</picture>
+				</article>
+				<article class="usp">
+					<div class="picture">
+						<strong class="subtitle">Een ceremonieel huwelijk</strong>
+						<p class="paragraph">Soms is het zo dat je wil trouwen op een speciale locatie, maar dat het geen officiële trouwlocatie is. Of op een tijdstip dat bij de gemeente niet is toegestaan. Dan kun je kiezen voor een ceremonieel huwelijk. Jullie zetten dan je handtekening bij de gemeente op de officiële huwelijksakte (een korte handeling, die ook op maandagochtend gratis kan!). De ceremonie laten jullie vervolgens door Jelle voltrekken. Er kan dan ook een akte ondertekend worden (deze is alleen niet rechtsgeldig) en Jelle zorgt voor het trouwboekje. Op deze manier kun je trouwen wanneer en waar je maar wilt, ook buiten, in de lucht, onder water of bij je schoonmoeder in de tuin! </p>
+					</div>
+					<picture class="picture">
+						<img class="image" src="" alt="">
+					</picture>
+				</article>
+			</section>			
 
 			<!-- block testimonials -->
 			<section class="block testimonials"></section>
 
+			<!-- block usp -->
+			<section class="block usps">
+				<article class="usp">
+					<div class="picture">
+						<strong class="subtitle">Leuk trouwen</strong>
+						<p class="paragraph">Leuktrouwen doe je al vanaf 750,- 
+							<br><br>
+							Heb je vragen of wil je meer informatie over werkwijze en bijvoorbeeld de exacte kosten?  Vul onderaan deze pagina het contactformulier in en je ontvangt zo spoedig mogelijk alle info.​
+						</p>
+					</div>
+					<picture class="picture">
+						<img class="image" src="" alt="">
+					</picture>
+				</article>
+			</section>
+
+			<!-- block counter -->
+			<section class="block counter">
+				<div class="wedding-counter">
+					<span class="counter">627</span>
+					<span class="text">Huwelijken gesloten</span>
+				</div>
+				<div class="experience-counter">
+					<span class="counter">10</span>
+					<span class="text">Jaar ervaring</span>
+				</div>
+			</section>		
+
 			<!-- block contactform -->
-			<section class="block contactform">joo
+			<section class="block contactform">
+				<h3>Contact</h3>
+				<p>Afspraak plannen of heb je een vraag? Stuur me gerust een berichtje of bel op <a class="mob"></a></p>
 				<form id="gform" class="form" method="POST">
 					<label for="name">Naam</label>
-				    <input class="form-field" type="text" name="name" placeholder="Bv. Katja de Bruin" required>
+				    <input class="form-field" type="text" name="name" placeholder="B.v. Charlotte van Dijk" required>
 				    
 					<label for="email">E-mail</label>
-				    <input class="form-field" type="email" name="email" placeholder="Bv. katjadebruin@gmail.com" required>
+				    <input class="form-field" type="email" name="email" placeholder="B.v. charlottevandijk@gmail.com" required>
 
 					<label for="subject">Onderwerp</label>
-				    <input class="form-field" type="text" name="subject" placeholder="Bv. Trouwfoto's in Utrecht" required>
+				    <input class="form-field" type="text" name="subject" placeholder="Bv. Trouwambtenaar Amsterdam" required>
 					
 					<label for="message">Bericht</label>
-				    <textarea class="form-field" name="message" rows="5" placeholder="Bv. Hoi Lotte, ik wil graag mijn bruiloft laten vastleggen. Het zal plaatsvinden op 20 juni. Ben je dan beschikbaar? Groetjes, Katja" required></textarea>
+				    <textarea class="form-field" name="message" rows="5" placeholder="Bv. Hoi Jelle, ik ga trouwen op op 20 Juni. Ben je dan beschikbaar als trouwambtenaar? Groetjes, Laura" required></textarea>
 				    <input type="hidden" id="honeypot" type="text" name="honeypot" value="" />
 				    <input type="hidden"class="to" type="text" name="to" value="" />
 				    <input class="send" type="submit" value="Verstuur bericht" >
 				</form>
 				<div class="thankyou"><div class="inner"><svg xmlns="http://www.w3.org/2000/svg" class="checkmark" viewBox="0 0 587.91 587.91" ><g><path d="M86.451 501.46c26.937 26.936 58.315 48.088 93.265 62.871 36.207 15.314 74.642 23.078 114.239 23.078 39.596 0 78.032-7.764 114.239-23.078 34.949-14.783 66.328-35.936 93.266-62.871 26.936-26.938 48.09-58.316 62.871-93.266 15.314-36.207 23.08-74.643 23.08-114.238 0-39.598-7.766-78.033-23.08-114.239 -14.781-34.95-35.936-66.328-62.871-93.265 -26.938-26.937-58.316-48.09-93.266-62.872C371.986 8.265 333.551 0.501 293.955 0.501c-39.597 0-78.032 7.765-114.239 23.079 -34.95 14.782-66.328 35.936-93.265 62.872s-48.09 58.315-62.873 93.264C8.265 215.923 0.5 254.358 0.5 293.956c0 39.596 7.765 78.031 23.079 114.238C38.361 443.144 59.515 474.522 86.451 501.46zM293.955 43.341c138.411 0 250.614 112.204 250.614 250.615 0 138.41-112.203 250.613-250.614 250.613S43.34 432.366 43.34 293.956C43.34 155.545 155.544 43.341 293.955 43.341z"/><path d="M293.955 587.909c-39.667 0-78.167-7.778-114.434-23.117 -35.01-14.809-66.442-35.998-93.423-62.979 -26.983-26.984-48.172-58.417-62.979-93.425C7.778 372.119 0 333.618 0 293.956c0-39.663 7.778-78.165 23.118-114.435 14.807-35.008 35.997-66.44 62.979-93.423 26.982-26.983 58.415-48.172 93.423-62.979 36.27-15.34 74.771-23.118 114.434-23.118 39.666 0 78.167 7.778 114.433 23.119 35.009 14.807 66.441 35.997 93.425 62.979 26.984 26.985 48.173 58.417 62.979 93.423 15.341 36.27 23.119 74.771 23.119 114.434 0 39.662-7.778 78.163-23.119 114.433 -14.806 35.007-35.994 66.439-62.979 93.425 -26.982 26.98-58.415 48.169-93.425 62.979C372.121 580.131 333.62 587.909 293.955 587.909zM293.955 1.001c-39.529 0-77.898 7.751-114.044 23.039 -34.889 14.757-66.215 35.874-93.106 62.765 -26.892 26.892-48.009 58.217-62.766 93.105C8.751 216.057 1 254.427 1 293.956 1 333.483 8.751 371.854 24.039 408c14.757 34.889 35.874 66.214 62.766 93.106 26.89 26.889 58.215 48.006 93.106 62.765 36.142 15.287 74.512 23.038 114.044 23.038s77.901-7.751 114.044-23.039c34.89-14.758 66.216-35.875 93.106-62.764 26.893-26.895 48.009-58.22 62.764-93.106 15.289-36.146 23.041-74.516 23.041-114.044 0-39.529-7.752-77.899-23.041-114.044 -14.754-34.887-35.871-66.212-62.764-93.106 -26.892-26.891-58.218-48.008-93.106-62.765C371.855 8.752 333.485 1.001 293.955 1.001zM293.955 545.069c-67.075 0-130.136-26.12-177.565-73.549 -47.429-47.43-73.55-110.489-73.55-177.564S68.96 163.82 116.39 116.391c47.429-47.429 110.49-73.55 177.565-73.55 67.075 0 130.135 26.121 177.564 73.55 47.43 47.43 73.55 110.49 73.55 177.565s-26.12 130.135-73.55 177.564C424.09 518.949 361.029 545.069 293.955 545.069zM293.955 43.841c-66.808 0-129.617 26.017-176.858 73.257 -47.24 47.241-73.257 110.05-73.257 176.858 0 66.808 26.017 129.617 73.257 176.856 47.24 47.24 110.05 73.257 176.858 73.257s129.617-26.017 176.857-73.257c47.24-47.239 73.257-110.049 73.257-176.856 0-66.808-26.017-129.618-73.257-176.858C423.571 69.857 360.763 43.841 293.955 43.841z"/></g><g><path d="M228.992 400.794c4.017 4.018 9.465 6.273 15.146 6.273 5.682 0 11.129-2.256 15.146-6.273L442.67 217.409c8.365-8.365 8.365-21.927 0-30.292s-21.928-8.366-30.293 0l-168.239 168.24 -68.606-68.607c-8.365-8.366-21.927-8.366-30.292 0 -8.365 8.365-8.365 21.927 0 30.292L228.992 400.794z"/><path d="M244.138 407.567c-5.855 0-11.36-2.28-15.5-6.42l-83.752-83.752c-8.546-8.547-8.546-22.453 0-31 4.14-4.141 9.645-6.421 15.5-6.421s11.359 2.28 15.5 6.421l68.253 68.253 167.885-167.886c4.14-4.141 9.645-6.42 15.5-6.42 5.854 0 11.359 2.28 15.5 6.42 4.141 4.14 6.421 9.645 6.421 15.5s-2.28 11.359-6.421 15.5L259.638 401.147C255.499 405.287 249.994 407.567 244.138 407.567zM160.386 280.975c-5.588 0-10.841 2.176-14.792 6.128 -8.156 8.157-8.156 21.428 0 29.585l83.752 83.752c3.951 3.951 9.204 6.127 14.792 6.127 5.589 0 10.842-2.176 14.793-6.127l183.385-183.385c3.951-3.951 6.128-9.205 6.128-14.792s-2.177-10.842-6.128-14.793c-3.951-3.952-9.205-6.127-14.793-6.127s-10.842 2.176-14.793 6.127L244.138 356.063l-68.96-68.96C171.227 283.151 165.974 280.975 160.386 280.975z"/></g></svg><h2>Dankjewel voor je bericht!</h2><p>Ik stuur je zo snel mogelijk een bericht terug.</p><a class="send" >Terug naar de site</a></div></div>
-    			<div class="load-wrapper"><div class="spinner"><div class="bubble-1"></div><div class="bubble-2"></div></div></div><div class="overtake"></div>
+    			<div class="overtake"><div class="spinner"><div class="bubble-1"></div><div class="bubble-2"></div></div></div>
 			</section>
 		</main>
+		<footer class="footer">
+			<ul class="menu">
+				<li class="menu-item">
+					<a href="/" class="menu-link">Home</a>
+				</li>
+				<li class="menu-item">
+					<a href="/Trouwambtenaar" class="menu-link">Trouwambtenaar</a>
+				</li>
+				<li class="menu-item">
+					<a href="" class="menu-link">Bedrijfsoptredens</a>
+				</li>
+				<li class="menu-item">
+					<a href="" class="menu-link">Theaterproducties</a>
+				</li>
+				<li class="menu-item">
+					<a href="" class="menu-link">Contact</a>
+				</li>																
+			</ul>
+			<address class="address">
+					Jelle Kuiper Producties BV<br>
+					Buiksloterdijk 306<br>
+					1034 ZE Amsterdam<br>
+					T: <a class="tel"></a><br>
+					E: 
+			</address>
+		</footer>
 		<script type="text/javascript" src="js/build.js" async defer></script>
 	</body>
 </html>
