--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
 		<header class="header">
 			<nav class="main-menu">
 				<div class="menu-toggle"></div>
-				<h1 class="logo"><a href="/">Jelle Kuiper</a></h1>
+				<a href="/"><h1 class="logo">Jelle Kuiper</h1></a>
 				<ul class="nav">
 					<li class="menu-item"><a class="menu-link" href="/Trouwambtenaar">Home</a></li>
 					<li class="menu-item"><a class="menu-link" href="/Trouwambtenaar">Trouwambtenaar</a></li>
@@ -62,8 +62,8 @@
 		<div class="block hero">
 			<div class="introduction">
 				<h1 class="title">Jelle Kuiper</h1>
-				<h2>Trouwambtenaar, Cabaretier, Theaterproducent</h2>
-				<p>Jelle kan met recht een creatieve duizendpoot worden genoemd. Hij is cabaretier en verzorgt optredens op maat. Hij is officieel trouwambtenaar in heel Nederland. Ook is hij theaterproducent van o.a. de Buurman en Buurman voorstellingen en regisseert hij Stefano Keizers.</p>
+				<h2 class="subtitle">Persoonlijk, Humoristisch, Ontspannen</h2>
+				<p class="introduction">Jelle Kuiper is cabaretier en buitengewoon ambtenaar, ook wel: BABS hij mag in heel Nederland officieel huwelijken sluiten. Jelle is uitgeroepen tot beste trouwambtenaar van 2014 bij de Dutch Wedding Awards! </p>
 				<a class="button" href="/contact">Contact</a>
 			</div>
 			<div class="image-wrapper">
@@ -83,16 +83,16 @@
 						<p class="paragraph">Omdat standaard huwelijksceremonies best wat leuker en wat minder stijf kunnen heeft Jelle in 2005 besloten zijn cabarettalent hierop in te zetten. Sindsdien is hij buitengewoon ambtenaar van de burgerlijke stand. Hij zorgt dat jouw belangrijkste dag van je leven een unieke ervaring wordt, voor jullie én voor jullie gasten. De toon van jullie dag wordt gezet met een ontspannen en intieme ceremonie vol humor en interactie.</p>
 					</div>
 					<picture class="picture">
-						<img class="image" src="" alt="">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
 				</article>
 				<article class="usp">
 					<div class="picture">
-						<strong class="subtitle">Leuk trouwen</strong>
+						<strong class="subtitle">Alles behalve doorsnee</strong>
 						<p class="paragraph">Dus geen saai of truttig opgelezen verhaal van een trouwambtenaar dat bij elk bruidspaar hetzelfde is. Nee, Jelle maakt er een persoonlijk verhaal van en hij zorgt voor een trouwceremonie die alles behalve doorsnee is! Dus wil jij je gasten verrassen en zorgen dat er nog weken, maanden, jaren wordt nagepraat over jouw bruiloft? Stuur een bericht en Jelle neemt snel contact met je op.​​​​​​​​​​</p>
 					</div>
 					<picture class="picture">
-						<img class="image" src="" alt="">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
 				</article>
 			</section>
@@ -106,10 +106,10 @@
 				<article class="usp">
 					<div class="picture">
 						<strong class="subtitle">Uit het juryrapport van de Dutch Wedding Awards:</strong>
-						<quote class="quote">"Deze trouwambtenaar doet iets met mensen. Je voelt je direct thuis bij hem; het is vertrouwd. Hij trekt de trouwceremonie niet naar zich toe alsof het zijn show is, maar het bruidspaar staat in het middelpunt van de belangstelling, TOP"</quote>
+						<blockquote class="quote">"Deze trouwambtenaar doet iets met mensen. Je voelt je direct thuis bij hem; het is vertrouwd. Hij trekt de trouwceremonie niet naar zich toe alsof het zijn show is, maar het bruidspaar staat in het middelpunt van de belangstelling, TOP"</blockquote>
 					</div>
 					<picture class="picture">
-						<img class="image" src="" alt="">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
 				</article>
 				<article class="usp">
@@ -118,26 +118,30 @@
 						<p class="paragraph">Soms is het zo dat je wil trouwen op een speciale locatie, maar dat het geen officiële trouwlocatie is. Of op een tijdstip dat bij de gemeente niet is toegestaan. Dan kun je kiezen voor een ceremonieel huwelijk. Jullie zetten dan je handtekening bij de gemeente op de officiële huwelijksakte (een korte handeling, die ook op maandagochtend gratis kan!). De ceremonie laten jullie vervolgens door Jelle voltrekken. Er kan dan ook een akte ondertekend worden (deze is alleen niet rechtsgeldig) en Jelle zorgt voor het trouwboekje. Op deze manier kun je trouwen wanneer en waar je maar wilt, ook buiten, in de lucht, onder water of bij je schoonmoeder in de tuin! </p>
 					</div>
 					<picture class="picture">
-						<img class="image" src="" alt="">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
 				</article>
 			</section>			
 
 			<!-- block testimonials -->
-			<section class="block testimonials"></section>
+			<section class="block testimonials">
+				<div class="inner">
+					<strong class="subtitle">Reacties</strong>
+				</div>
+			</section>
 
 			<!-- block usp -->
 			<section class="block usps">
 				<article class="usp">
 					<div class="picture">
 						<strong class="subtitle">Leuk trouwen</strong>
-						<p class="paragraph">Leuktrouwen doe je al vanaf 750,- 
+						<p class="paragraph">Leuktrouwen doe je al vanaf <strong>750,-</strong> 
 							<br><br>
 							Heb je vragen of wil je meer informatie over werkwijze en bijvoorbeeld de exacte kosten?  Vul onderaan deze pagina het contactformulier in en je ontvangt zo spoedig mogelijk alle info.​
 						</p>
 					</div>
 					<picture class="picture">
-						<img class="image" src="" alt="">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
 				</article>
 			</section>
@@ -203,6 +207,8 @@
 					T: <a class="tel"></a><br>
 					E: 
 			</address>
+			<svg class="social-media icon svg" width="15px" height="15px" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1684 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z"></path></svg>
+			<svg class="social-media icon svg" width="15px" height="15px" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1684 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z"></path></svg>
 		</footer>
 		<script type="text/javascript" src="js/build.js" async defer></script>
 	</body>
