--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
 		<meta property="og:title" content="Studio Ginger">
 		<meta property="og:description" content="Fotografie voor: moeders | trouwen | portretten | publicaties">
 		<meta property="og:image" content="https://jellekuiper.nl/img/og-image.png">
+
 		<meta property="og:image:width" content="850" />
 		<meta property="og:image:height" content="567" />
 		<meta property="og:url" content="https://jellekuiper.nl/">
@@ -60,17 +61,18 @@
 
 		<!-- block hero -->
 		<div class="block hero">
+				<div class="image-wrapper">
+					<picture class="hero-image">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
+					</picture>
+				</div>
 			<div class="introduction">
-				<h1 class="title">Jelle Kuiper</h1>
+				<h1 class="title">trouwambtenaar</h1>
 				<h2 class="subtitle">Persoonlijk, Humoristisch, Ontspannen</h2>
 				<p class="introduction">Jelle Kuiper is cabaretier en buitengewoon ambtenaar, ook wel: BABS hij mag in heel Nederland officieel huwelijken sluiten. Jelle is uitgeroepen tot beste trouwambtenaar van 2014 bij de Dutch Wedding Awards! </p>
 				<a class="button" href="/contact">Contact</a>
 			</div>
-			<div class="image-wrapper">
-				<picture class="hero-image">
-					<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
-				</picture>
-			</div>
+
 		</div>
 
 		<main class="main">
@@ -207,8 +209,10 @@
 					T: <a class="tel"></a><br>
 					E: 
 			</address>
-			<svg class="social-media icon svg" width="15px" height="15px" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1684 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z"></path></svg>
-			<svg class="social-media icon svg" width="15px" height="15px" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1684 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z"></path></svg>
+			<aside class="icons">
+				<svg class="social-media icon svg" width="15px" height="15px" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1684 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z"></path></svg>
+				<svg class="social-media icon svg" width="15px" height="15px" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1684 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z"></path></svg>
+			</aside>
 		</footer>
 		<script type="text/javascript" src="js/build.js" async defer></script>
 	</body>
