styling the testimonials

--- a/app/index.html
+++ b/app/index.html
@@ -80,22 +80,22 @@
 			<!-- block usp -->
 			<section class="block usps">
 				<article class="usp">
+					<picture class="picture">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
+					</picture>
 					<div class="picture">
 						<strong class="subtitle">Leuk trouwen</strong>
 						<p class="paragraph">Omdat standaard huwelijksceremonies best wat leuker en wat minder stijf kunnen heeft Jelle in 2005 besloten zijn cabarettalent hierop in te zetten. Sindsdien is hij buitengewoon ambtenaar van de burgerlijke stand. Hij zorgt dat jouw belangrijkste dag van je leven een unieke ervaring wordt, voor jullie én voor jullie gasten. De toon van jullie dag wordt gezet met een ontspannen en intieme ceremonie vol humor en interactie.</p>
 					</div>
+				</article>
+				<article class="usp">
 					<picture class="picture">
 						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
-				</article>
-				<article class="usp">
 					<div class="picture">
 						<strong class="subtitle">Alles behalve doorsnee</strong>
 						<p class="paragraph">Dus geen saai of truttig opgelezen verhaal van een trouwambtenaar dat bij elk bruidspaar hetzelfde is. Nee, Jelle maakt er een persoonlijk verhaal van en hij zorgt voor een trouwceremonie die alles behalve doorsnee is! Dus wil jij je gasten verrassen en zorgen dat er nog weken, maanden, jaren wordt nagepraat over jouw bruiloft? Stuur een bericht en Jelle neemt snel contact met je op.​​​​​​​​​​</p>
 					</div>
-					<picture class="picture">
-						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
-					</picture>
 				</article>
 			</section>
 
@@ -106,22 +106,22 @@
 			<!-- block usp -->
 			<section class="block usps">
 				<article class="usp">
+					<picture class="picture">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
+					</picture>
 					<div class="picture">
 						<strong class="subtitle">Uit het juryrapport van de Dutch Wedding Awards:</strong>
 						<blockquote class="quote">"Deze trouwambtenaar doet iets met mensen. Je voelt je direct thuis bij hem; het is vertrouwd. Hij trekt de trouwceremonie niet naar zich toe alsof het zijn show is, maar het bruidspaar staat in het middelpunt van de belangstelling, TOP"</blockquote>
 					</div>
+				</article>
+				<article class="usp">
 					<picture class="picture">
 						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
-				</article>
-				<article class="usp">
 					<div class="picture">
 						<strong class="subtitle">Een ceremonieel huwelijk</strong>
 						<p class="paragraph">Soms is het zo dat je wil trouwen op een speciale locatie, maar dat het geen officiële trouwlocatie is. Of op een tijdstip dat bij de gemeente niet is toegestaan. Dan kun je kiezen voor een ceremonieel huwelijk. Jullie zetten dan je handtekening bij de gemeente op de officiële huwelijksakte (een korte handeling, die ook op maandagochtend gratis kan!). De ceremonie laten jullie vervolgens door Jelle voltrekken. Er kan dan ook een akte ondertekend worden (deze is alleen niet rechtsgeldig) en Jelle zorgt voor het trouwboekje. Op deze manier kun je trouwen wanneer en waar je maar wilt, ook buiten, in de lucht, onder water of bij je schoonmoeder in de tuin! </p>
 					</div>
-					<picture class="picture">
-						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
-					</picture>
 				</article>
 			</section>			
 
@@ -135,16 +135,16 @@
 			<!-- block usp -->
 			<section class="block usps">
 				<article class="usp">
-					<div class="picture">
-						<strong class="subtitle">Leuk trouwen</strong>
-						<p class="paragraph">Leuktrouwen doe je al vanaf <strong>750,-</strong> 
-							<br><br>
-							Heb je vragen of wil je meer informatie over werkwijze en bijvoorbeeld de exacte kosten?  Vul onderaan deze pagina het contactformulier in en je ontvangt zo spoedig mogelijk alle info.​
-						</p>
-					</div>
 					<picture class="picture">
 						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
+					<div class="article">
+						<strong class="subtitle">Kosten</strong>
+						<p class="paragraph">Leuktrouwen doe je al vanaf <strong>750,-</strong> 
+							<br><br>
+							Heb je vragen of wil je meer informatie over werkwijze en bijvoorbeeld de exacte kosten?  Vul onderaan deze pagina het <a href="#contact">contactformulier</a> in en je ontvangt zo spoedig mogelijk alle info.​
+						</p>
+					</div>
 				</article>
 			</section>
 
@@ -161,9 +161,9 @@
 			</section>		
 
 			<!-- block contactform -->
-			<section class="block contactform">
-				<h3>Contact</h3>
-				<p>Afspraak plannen of heb je een vraag? Stuur me gerust een berichtje of bel op <a class="mob"></a></p>
+			<section class="block contactform" id="contact">
+				<strong class="subtitle">Contact</strong>
+				<p>Heb je een vraag of wil je kennis maken? Bel op <a class="mob"></a> of stuur me een berichtje.</p>
 				<form id="gform" class="form" method="POST">
 					<label for="name">Naam</label>
 				    <input class="form-field" type="text" name="name" placeholder="B.v. Charlotte van Dijk" required>
@@ -207,7 +207,7 @@
 					Buiksloterdijk 306<br>
 					1034 ZE Amsterdam<br>
 					T: <a class="tel"></a><br>
-					E: 
+					E: <a class="mail"></a>
 			</address>
 			<aside class="icons">
 				<svg class="social-media icon svg" width="15px" height="15px" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1684 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z"></path></svg>
