--- a/app/trouwambtenaar.html
+++ b/app/trouwambtenaar.html
@@ -43,15 +43,15 @@
 		<style><!-- inject-style src="./dist/css/stylesheet.css" --></style>
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css" async defer>
 	</head>
-	<body class="body home">
+	<body class="body page">
 
 		<header class="header">
 			<nav class="main-menu">
 				<div class="menu-toggle"></div>
 				<a href="/"><h1 class="logo">Jelle Kuiper</h1></a>
 				<ul class="nav">
-					<li class="menu-item active"><a class="menu-link" href="/">Home</a></li>
-					<li class="menu-item"><a class="menu-link" href="/trouwambtenaar.html">Trouwambtenaar</a></li>
+					<li class="menu-item"><a class="menu-link" href="/">Home</a></li>
+					<li class="menu-item active"><a class="menu-link" href="/trouwambtenaar.html">Trouwambtenaar</a></li>
 					<li class="menu-item"><a class="menu-link" href="/bedrijfsoptredens.html" >Bedrijfsoptredens</a></li>
 					<li class="menu-item"><a class="menu-link" href="/theaterproducties.html">Theaterproducties</a></li>
 					<li class="menu-item"><a class="menu-link" href="/Contact" class="button">Contact</a></li>
@@ -67,9 +67,9 @@
 					</picture>
 				</div>
 			<div class="introduction">
-				<h1 class="title">jelle kuiper</h1>
-				<h2 class="subtitle">Trouwambtenaar, Cabaretier, Theaterproducent</h2>
-				<p class="introduction">JJelle kan met recht een creatieve duizendpoot worden genoemd. Hij is cabaretier en verzorgt optredens op maat. Hij is officieel trouwambtenaar in heel Nederland. Ook is hij theaterproducent van o.a. de Buurman en Buurman voorstellingen en regisseert hij Stefano Keizers.</p>
+				<h1 class="title">trouwambtenaar</h1>
+				<h2 class="subtitle">Persoonlijk, Humoristisch, Ontspannen</h2>
+				<p class="introduction">Jelle Kuiper is cabaretier en buitengewoon ambtenaar, ook wel: BABS hij mag in heel Nederland officieel huwelijken sluiten. Jelle is uitgeroepen tot beste trouwambtenaar van 2014 bij de Dutch Wedding Awards! </p>
 				<a class="button" href="/contact">Contact</a>
 			</div>
 
@@ -77,33 +77,90 @@
 
 		<main class="main">
 
-			<!-- block reference -->
-			<section class="block references">
-				<article class="reference">
-					<h3 class="title">Trouwambtenaar</h3>
-					<p class="keywords">Persoonlijk, humoristisch, ontspannen.</p>
-					<a class="button" href="/bedrijfsoptredens">Lees meer</a>
-					<picture class="reference-image">
+			<!-- block usp -->
+			<section class="block usps">
+				<article class="usp">
+					<picture class="picture">
 						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
+					<div class="picture">
+						<strong class="subtitle">Leuk trouwen</strong>
+						<p class="paragraph">Omdat standaard huwelijksceremonies best wat leuker en wat minder stijf kunnen heeft Jelle in 2005 besloten zijn cabarettalent hierop in te zetten. Sindsdien is hij buitengewoon ambtenaar van de burgerlijke stand. Hij zorgt dat jouw belangrijkste dag van je leven een unieke ervaring wordt, voor jullie én voor jullie gasten. De toon van jullie dag wordt gezet met een ontspannen en intieme ceremonie vol humor en interactie.</p>
+					</div>
 				</article>
-								<article class="reference">
-					<h3 class="title">Bedrijfsoptredens</h3>
-					<p class="keywords">Bijzonder, spannend, krachtig.</p>
-					<a class="button" href="/bedrijfsoptredens">Lees meer</a>
-					<picture class="reference-image">
+				<article class="usp">
+					<picture class="picture">
 						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
 					</picture>
-				</article>
-				<article class="reference">
-					<h3 class="title">Theaterproducties</h3>
-					<p class="keywords">Creatief, aangrijpend, radicaal.</p>
-					<a class="button" href="/bedrijfsoptredens">Lees meer</a>
-					<picture class="reference-image">
-						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
-					</picture>
+					<div class="picture">
+						<strong class="subtitle">Alles behalve doorsnee</strong>
+						<p class="paragraph">Dus geen saai of truttig opgelezen verhaal van een trouwambtenaar dat bij elk bruidspaar hetzelfde is. Nee, Jelle maakt er een persoonlijk verhaal van en hij zorgt voor een trouwceremonie die alles behalve doorsnee is! Dus wil jij je gasten verrassen en zorgen dat er nog weken, maanden, jaren wordt nagepraat over jouw bruiloft? Stuur een bericht en Jelle neemt snel contact met je op.​​​​​​​​​​</p>
+					</div>
 				</article>
 			</section>
+
+			<section class="block video">
+				<div class="inner">
+					<iframe class="iframe" width="100%" height="100%" src="https://www.youtube.com/embed/sQZcXToH1CU?vq=hd720&modestbranding=1&showinfo=0&controls=0&autoplay=0&rel=0&theme=light" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</div>
+			</section>
+
+			<!-- block usp -->
+			<section class="block usps">
+				<article class="usp">
+					<picture class="picture">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
+					</picture>
+					<div class="picture">
+						<strong class="subtitle">Uit het juryrapport van de Dutch Wedding Awards:</strong>
+						<blockquote class="quote">"Deze trouwambtenaar doet iets met mensen. Je voelt je direct thuis bij hem; het is vertrouwd. Hij trekt de trouwceremonie niet naar zich toe alsof het zijn show is, maar het bruidspaar staat in het middelpunt van de belangstelling, TOP"</blockquote>
+					</div>
+				</article>
+				<article class="usp">
+					<picture class="picture">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
+					</picture>
+					<div class="picture">
+						<strong class="subtitle">Een ceremonieel huwelijk</strong>
+						<p class="paragraph">Soms is het zo dat je wil trouwen op een speciale locatie, maar dat het geen officiële trouwlocatie is. Of op een tijdstip dat bij de gemeente niet is toegestaan. Dan kun je kiezen voor een ceremonieel huwelijk. Jullie zetten dan je handtekening bij de gemeente op de officiële huwelijksakte (een korte handeling, die ook op maandagochtend gratis kan!). De ceremonie laten jullie vervolgens door Jelle voltrekken. Er kan dan ook een akte ondertekend worden (deze is alleen niet rechtsgeldig) en Jelle zorgt voor het trouwboekje. Op deze manier kun je trouwen wanneer en waar je maar wilt, ook buiten, in de lucht, onder water of bij je schoonmoeder in de tuin! </p>
+					</div>
+				</article>
+			</section>			
+
+			<!-- block testimonials -->
+			<section class="block testimonials">
+				<div class="inner">
+					<strong class="subtitle">Reacties</strong>
+				</div>
+			</section>
+
+			<!-- block usp -->
+			<section class="block usps">
+				<article class="usp">
+					<picture class="picture">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
+					</picture>
+					<div class="article">
+						<strong class="subtitle">Kosten</strong>
+						<p class="paragraph">Leuktrouwen doe je al vanaf <strong>750,-</strong> 
+							<br><br>
+							Heb je vragen of wil je meer informatie over werkwijze en bijvoorbeeld de exacte kosten?  Vul onderaan deze pagina het <a href="#contact">contactformulier</a> in en je ontvangt zo spoedig mogelijk alle info.​
+						</p>
+					</div>
+				</article>
+			</section>
+
+			<!-- block counter -->
+			<section class="block counter">
+				<div class="wedding-counter">
+					<span class="counter">627</span>
+					<span class="text">Huwelijken gesloten</span>
+				</div>
+				<div class="experience-counter">
+					<span class="counter">10</span>
+					<span class="text">Jaar ervaring</span>
+				</div>
+			</section>		
 
 			<!-- block contactform -->
 			<section class="block contactform" id="contact">
@@ -129,6 +186,26 @@
     			<div class="overtake"><div class="spinner"><div class="bubble-1"></div><div class="bubble-2"></div></div></div>
 			</section>
 
+			<!-- block reference -->
+			<section class="block references">
+				<strong class="subtitle">Jelle doet ook</strong>
+				<article class="reference">
+					<h3 class="title">Bedrijfsoptredens</h3>
+					<p class="keywords">Bijzonder, spannend, krachtig.</p>
+					<a class="button" href="/bedrijfsoptredens">Lees meer</a>
+					<picture class="reference-image">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
+					</picture>
+				</article>
+				<article class="reference">
+					<h3 class="title">Bedrijfsoptredens</h3>
+					<p class="keywords">Bijzonder, spannend, krachtig.</p>
+					<a class="button" href="/bedrijfsoptredens">Lees meer</a>
+					<picture class="reference-image">
+						<img class="img" src="img/scape4.jpg" alt="Jelle Kuiper">
+					</picture>
+				</article>
+			</section>
 		</main>
 		<footer class="footer">
 			<ul class="nav">
