fixing the url rewrites

--- a/app/index.html
+++ b/app/index.html
@@ -51,10 +51,10 @@
 				<a href="/"><h1 class="logo">Jelle Kuiper</h1></a>
 				<ul class="nav">
 					<li class="menu-item active"><a href="/" class="menu-link">Home</a></li>
-					<li class="menu-item"><a href="/trouwambtenaar.html" class="menu-link">Trouwambtenaar</a></li>
-					<li class="menu-item"><a href="/bedrijfsoptredens.html"  class="menu-link">Bedrijfsoptredens</a></li>
-					<li class="menu-item"><a href="/theaterproducties.html" class="menu-link">Theaterproducties</a></li>
-					<li class="menu-item"><a href="/Contact" class="button" class="menu-link">Contact</a></li>
+					<li class="menu-item"><a href="/trouwambtenaar" class="menu-link">Trouwambtenaar</a></li>
+					<li class="menu-item"><a href="/bedrijfsoptredens"  class="menu-link">Bedrijfsoptredens</a></li>
+					<li class="menu-item"><a href="/theaterproducties" class="menu-link">Theaterproducties</a></li>
+					<li class="menu-item"><a href="#Contact" class="menu-link">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -70,7 +70,7 @@
 				<h1 class="title">jelle kuiper</h1>
 				<h2 class="subtitle">Trouwambtenaar, Cabaretier, Theaterproducent</h2>
 				<p class="introduction">JJelle kan met recht een creatieve duizendpoot worden genoemd. Hij is cabaretier en verzorgt optredens op maat. Hij is officieel trouwambtenaar in heel Nederland. Ook is hij theaterproducent van o.a. de Buurman en Buurman voorstellingen en regisseert hij Stefano Keizers.</p>
-				<a href="/contact" class="button">Contact</a>
+				<a href="#contact" class="button">Contact</a>
 			</div>
 
 		</div>
@@ -136,16 +136,16 @@
 					<a href="/" class="menu-link">Home</a>
 				</li>
 				<li class="menu-item">
-					<a href="/trouwambtenaar.html" class="menu-link">Trouwambtenaar</a>
+					<a href="/trouwambtenaar" class="menu-link">Trouwambtenaar</a>
 				</li>
 				<li class="menu-item">
-					<a href="/bedrijfsoptredens.html" class="menu-link">Bedrijfsoptredens</a>
+					<a href="/bedrijfsoptredens" class="menu-link">Bedrijfsoptredens</a>
 				</li>
 				<li class="menu-item">
-					<a href="/theaterproducties.html" class="menu-link">Theaterproducties</a>
+					<a href="/theaterproducties" class="menu-link">Theaterproducties</a>
 				</li>
 				<li class="menu-item">
-					<a href="/contact.html" class="menu-link">Contact</a>
+					<a href="#contact" class="menu-link">Contact</a>
 				</li>																
 			</ul>
 			<aside class="icons">
