--- a/app/trouwambtenaar.html
+++ b/app/trouwambtenaar.html
@@ -51,10 +51,10 @@
 				<a href="/"><h1 class="logo">Jelle Kuiper</h1></a>
 				<ul class="nav">
 					<li class="menu-item"><a href="/" class="menu-link">Home</a></li>
-					<li class="menu-item active"><a href="/trouwambtenaar.html" class="menu-link">Trouwambtenaar</a></li>
-					<li class="menu-item"><a href="/bedrijfsoptredens.html"  class="menu-link">Bedrijfsoptredens</a></li>
-					<li class="menu-item"><a href="/theaterproducties.html" class="menu-link">Theaterproducties</a></li>
-					<li class="menu-item"><a href="/Contact" class="button" class="menu-link">Contact</a></li>
+					<li class="menu-item active"><a href="/trouwambtenaar" class="menu-link">Trouwambtenaar</a></li>
+					<li class="menu-item"><a href="/bedrijfsoptredens"  class="menu-link">Bedrijfsoptredens</a></li>
+					<li class="menu-item"><a href="/theaterproducties" class="menu-link">Theaterproducties</a></li>
+					<li class="menu-item"><a href="#Contact" class="menu-link">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -70,7 +70,7 @@
 				<h1 class="title">trouwambtenaar</h1>
 				<h2 class="subtitle">Persoonlijk, Humoristisch, Ontspannen</h2>
 				<p class="introduction">Jelle Kuiper is cabaretier en buitengewoon ambtenaar, ook wel: BABS hij mag in heel Nederland officieel huwelijken sluiten. Jelle is uitgeroepen tot beste trouwambtenaar van 2014 bij de Dutch Wedding Awards! </p>
-				<a href="/contact" class="button">Contact</a>
+				<a href="#contact" class="button">Contact</a>
 			</div>
 
 		</div>
@@ -213,16 +213,16 @@
 					<a href="/" class="menu-link">Home</a>
 				</li>
 				<li class="menu-item">
-					<a href="/trouwambtenaar.html" class="menu-link">Trouwambtenaar</a>
+					<a href="/trouwambtenaar" class="menu-link">Trouwambtenaar</a>
 				</li>
 				<li class="menu-item">
-					<a href="/bedrijfsoptredens.html" class="menu-link">Bedrijfsoptredens</a>
+					<a href="/bedrijfsoptredens" class="menu-link">Bedrijfsoptredens</a>
 				</li>
 				<li class="menu-item">
-					<a href="/theaterproducties.html" class="menu-link">Theaterproducties</a>
+					<a href="/theaterproducties" class="menu-link">Theaterproducties</a>
 				</li>
 				<li class="menu-item">
-					<a href="/contact.html" class="menu-link">Contact</a>
+					<a href="#contact" class="menu-link">Contact</a>
 				</li>																
 			</ul>
 			<aside class="icons">
