making other page

--- a/app/trouwambtenaar.html
+++ b/app/trouwambtenaar.html
@@ -3,6 +3,7 @@ title: Trouwambtenaar
 keywords: Persoonlijk, Humoristisch, Ontspannen
 summary: Jelle Kuiper is cabaretier en buitengewoon ambtenaar, ook wel BABS hij mag in heel Nederland officieel huwelijken sluiten. Jelle is uitgeroepen tot beste trouwambtenaar van 2014 bij de Dutch Wedding Awards!
 layout: page
+videourl: https://www.youtube.com/embed/sQZcXToH1CU
 sitemap:
     priority: 1
     changefreq: 'yearly'
