--- a/app/index.html
+++ b/app/index.html
@@ -10,39 +10,9 @@ sitemap:
 ---
 <!-- block reference -->
 <section class="block references"> 
-	<article class="reference">
-		<div class="introduction">
-			<h3 class="title">Trouwambtenaar</h3>
-			<p class="keywords">Persoonlijk, humoristisch, ontspannen.</p>
-			<p class="description">Omdat standaard huwelijksceremonies best wat leuker en wat minder stijf kunnen heeft Jelle in 2005 besloten zijn cabarettalent hierop in te zetten. Sindsdien is hij buitengewoon ambtenaar van de burgerlijke stand. Hij zorgt dat jouw belangrijkste dag van je leven een unieke ervaring wordt, voor jullie én voor jullie gasten. De toon van jullie dag wordt gezet met een ontspannen en intieme ceremonie vol humor en interactie.</p>
-			<a href="/trouwambtenaar" class="button">Lees meer</a>
-		</div>
-		<picture data-focus-x="0.331" data-focus-y="-0.224" class="focuspoint reference-image">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
-		</picture>
-	</article>
-	<article class="reference">
-		<div class="introduction">
-			<h3 class="title">Bedrijfsoptredens</h3>
-			<p class="keywords">Bijzonder, spannend, krachtig.</p>
-			<p class="description">Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.</p>
-			<a href="/bedrijfsoptredens" class="button">Lees meer</a>
-		</div>
-		<picture data-focus-x="0.331" data-focus-y="-0.224" class="focuspoint reference-image">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
-		</picture>
-	</article>
-	<article class="reference">
-		<div class="introduction">
-			<h3 class="title">Theaterproducties</h3>
-			<p class="keywords">Creatief, aangrijpend, radicaal.</p>
-			<p class="description">Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.</p>
-			<a href="/theaterproducties" class="button">Lees meer</a>
-		</div>
-		<picture data-focus-x="0.331" data-focus-y="-0.224" class="focuspoint reference-image">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
-		</picture>
-	</article>
+	{% include _blocks/_references/trouwambtenaar.html %}
+	{% include _blocks/_references/bedrijfsoptredens.html %}
+	{% include _blocks/_references/theaterproducties.html %}
 </section>
 
 {% include _blocks/contactform.html %}
