--- a/app/bedrijfsoptredens.html
+++ b/app/bedrijfsoptredens.html
@@ -35,7 +35,7 @@ sitemap:
 <section class="block usps">
 	<article class="usp">
 		<picture class="focuspoint picture">
-			<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-presentatie-maxima.JPG" alt="Jelle Kuiper">
+			<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-presentatie-maxima.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Presentatie en Dagvoorzitterschap</strong>
