--- a/app/theaterproducties/buurman-en-buurman.html
+++ b/app/theaterproducties/buurman-en-buurman.html
@@ -3,6 +3,7 @@ title: Buurman en buurman
 text: In 2009 verwierf Jelle de theaterrechten van Buurman en Buurman (bekend van VPRO-tv). Samen met Senf Theaterpartners ontwikkelde Jelle een theatervoorstelling van deze klussende buurmannen. In maart 2010 ging de eerste Buurman en Buurman musical in première. 'Buurman en Buurman, gaan verhuizen'. Een vervolg kon niet uitblijven op in maart 2012 ging 'Buurman en Buurman beginnen voorzichzelf' in premiere. De derde voorstelling 'Buurman en Buurman worden brommend ' toerde in 2015 en 2016 door Nederland. Vanaf oktober 2017 is de 4e voorstelling 'A JE TO!' in alle theaters te zien. Voor meer info over de Buurman en Buurman musicals kunt u terecht op de Buurman en Buurman website.
 headerimage: /assets/img/theaterproducties/Theaterproducties-JelleKuiper-StefanoKeizers.jpg
 formimage: /assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-fakespeech.jpg
+externalUrl: //google.com
 layout: detailpage
 videourl: https://www.youtube.com/embed/BxSe_HeXCSI
 sitemap:
@@ -13,7 +14,7 @@ sitemap:
 
 {% include _blocks/text.html %}
 
-<a href="" class="button">{{ page.title }}</a>
+<a href="{{ page.externalUrl }}" target="blank" class="button">{{ page.title }}</a>
 
 {% include _blocks/video.html %}
 
