rewritten all the pages in _pages

--- a/app/_pages/bedrijfsoptredens/index.html
+++ b/app/_pages/bedrijfsoptredens/index.html
@@ -10,6 +10,8 @@ firstTimer: 307
 firstTitle: 'Bedrijfsoptredens'
 secondTimer: 95
 secondTitle: 'Fakespeeches'
+permalink: "/bedrijfsoptredens/"
+
 ---
 <!-- block usp -->
 <section class="block usps">
