--- a/app/_pages/trouwambtenaar/index.html
+++ b/app/_pages/trouwambtenaar/index.html
@@ -10,6 +10,8 @@ firstTimer: 627
 firstTitle: 'Huwelijk gesloten'
 secondTimer: 10
 secondTitle: 'Jaar ervaring'
+permalink: "/trouwambtenaar/"
+
 ---
 <!-- block usp -->
 <section class="block usps">
