removed the reference blocks

--- a/app/_pages/bedrijfsoptredens/index.html
+++ b/app/_pages/bedrijfsoptredens/index.html
@@ -1,6 +1,7 @@
 ---
 title: Bedrijfsoptredens
 keywords: Bijzonder, Spannend, Krachtig
+teaserText: Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.
 summary: Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.
 headerimage: /assets/img/bedrijfsoptredens/Bedrijfsoptredens-Jelle-Kuiper-hero.jpg
 formimage: /assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-contact.jpg
@@ -72,10 +73,3 @@ permalink: "/bedrijfsoptredens/"
 {% include _blocks/counter.html %}
 
 {% include _blocks/contactform.html %}
-
-<!-- block reference -->
-<section class="block references">
-	<strong class="subtitle">Jelle doet ook</strong>
-	{% include _blocks/_references/trouwambtenaar.html %}
-	{% include _blocks/_references/theaterproducties.html %}
-</section>
