--- a/app/_pages/theaterproducties/index.html
+++ b/app/_pages/theaterproducties/index.html
@@ -1,6 +1,7 @@
 ---
 title: Theaterproducties
 keywords: Creatief, Aangrijpend, Radicaal.
+teaserText: Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.
 summary: Jelle Kuiper studeerde in 1998 af als theatermaker. Naast dat hij zelf veel op het podium staat, produceert hij ook theatervoorstellingen. Op dit moment produceert en regiseert Jelle de eerste voorstelling van cabarettalent Stefano Keizers.
 headerimage: /assets/img/theaterproducties/Theaterproducties-JelleKuiper-StefanoKeizers.jpg
 formimage: /assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-fakespeech.jpg
@@ -49,10 +50,3 @@ permalink: "/theaterproducties/"
 {% include _blocks/counter.html %}
 
 {% include _blocks/contactform.html %}
-
-<!-- block reference -->
-<section class="block references"> 
-	<strong class="subtitle">Jelle doet ook</strong>
-	{% include _blocks/_references/trouwambtenaar.html %}
-	{% include _blocks/_references/bedrijfsoptredens.html %}
-</section>
