--- a/app/_pages/trouwambtenaar/index.html
+++ b/app/_pages/trouwambtenaar/index.html
@@ -1,6 +1,7 @@
 ---
 title: Trouwambtenaar
 keywords: Persoonlijk, Humoristisch, Ontspannen
+teaserText: Omdat standaard huwelijksceremonies best wat leuker en wat minder stijf kunnen heeft Jelle in 2005 besloten zijn cabarettalent hierop in te zetten. Sindsdien is hij buitengewoon ambtenaar van de burgerlijke stand. Hij zorgt dat jouw belangrijkste dag van je leven een unieke ervaring wordt, voor jullie én voor jullie gasten. De toon van jullie dag wordt gezet met een ontspannen en intieme ceremonie vol humor en interactie.
 summary: Jelle Kuiper is cabaretier en buitengewoon ambtenaar, ook wel BABS hij mag in heel Nederland officieel huwelijken sluiten. Jelle is uitgeroepen tot beste trouwambtenaar van 2014 bij de Dutch Wedding Awards!
 headerimage: /assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-hero.jpg
 formimage: /assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-knuffel-contact.jpg
@@ -82,10 +83,3 @@ permalink: "/trouwambtenaar/"
 {% include _blocks/counter.html %}
 
 {% include _blocks/contactform.html %}
-
-<!-- block reference -->
-<section class="block references"> 
-	<strong class="subtitle">Jelle doet ook</strong>
-	{% include _blocks/_references/bedrijfsoptredens.html %}
-	{% include _blocks/_references/theaterproducties.html %}
-</section>
