--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,5 @@ title: Jelle Kuiper
 keywords: Trouwambtenaar, Cabaretier, Theaterproducent
 summary: Jelle kan met recht een creatieve duizendpoot worden genoemd. Hij is cabaretier en verzorgt optredens op maat. Hij is officieel trouwambtenaar in heel Nederland. Ook is hij theaterproducent van o.a. de Buurman en Buurman voorstellingen en regisseert hij Stefano Keizers.
 headerimage: /assets/img/jellekuiper.jpg
-layout: page
+layout: front
 ---
-<!-- block reference -->
-<section class="block references"> 
-	{% include _blocks/_references/trouwambtenaar.html %}
-	{% include _blocks/_references/bedrijfsoptredens.html %}
-	{% include _blocks/_references/theaterproducties.html %}
-</section>
-
-{% include _blocks/contactform.html %}
