up before changing smooth scrolling issue

--- a/app/_pages/bedrijfsoptredens/index.html
+++ b/app/_pages/bedrijfsoptredens/index.html
@@ -17,7 +17,7 @@ permalink: "/bedrijfsoptredens/"
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture class="focuspoint picture">
+		<picture class="focuspoint picture fade-in">
 			<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-fakespeech.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
