--- a/app/_pages/theaterproducties/index.html
+++ b/app/_pages/theaterproducties/index.html
@@ -17,7 +17,7 @@ permalink: "/theaterproducties/"
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture class="focuspoint picture">
+		<picture class="focuspoint picture fade-in">
 			<img class="img" src="/assets/img/theaterproducties/Theaterproducties-Jelle-Kuiper-introductie.jpeg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
