--- a/app/_pages/trouwambtenaar/index.html
+++ b/app/_pages/trouwambtenaar/index.html
@@ -17,7 +17,7 @@ permalink: "/trouwambtenaar/"
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture class="focuspoint picture">
+		<picture class="focuspoint picture fade-in">
 			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-leuktrouwen.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
