stijling met koen

--- a/app/_pages/bedrijfsoptredens/index.html
+++ b/app/_pages/bedrijfsoptredens/index.html
@@ -5,8 +5,11 @@ teaserText: Vele bedrijven en instellingen hebben Jelle ingehuurd voor een prese
 summary: Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.
 headerimage: /assets/img/bedrijfsoptredens/Bedrijfsoptredens-Jelle-Kuiper-hero.jpg
 formimage: /assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-contact.jpg
+subject: 'Bv. Fakespeech Amsterdam'
+message: 'Bv. Hoi Jelle, ik ga wil je graag inhuren voor een fakespeech bij mijn bedrijf. Zullen we een keer koffie drinken?  Groetjes, Laura'
 videourl: https://www.youtube.com/embed/bSUdYbj6aJk
 layout: page
+order: 2
 firstTimer: 307
 firstTitle: 'Bedrijfsoptredens'
 secondTimer: 95
