--- a/app/_pages/theaterproducties/index.html
+++ b/app/_pages/theaterproducties/index.html
@@ -5,7 +5,10 @@ teaserText: Vele bedrijven en instellingen hebben Jelle ingehuurd voor een prese
 summary: Jelle Kuiper studeerde in 1998 af als theatermaker. Naast dat hij zelf veel op het podium staat, produceert hij ook theatervoorstellingen. Op dit moment produceert en regiseert Jelle de eerste voorstelling van cabarettalent Stefano Keizers.
 headerimage: /assets/img/theaterproducties/Theaterproducties-JelleKuiper-StefanoKeizers.jpg
 formimage: /assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-fakespeech.jpg
+subject: 'Bv. Theaterproducent'
+message: 'Bv. Hoi Jelle,  ik heb een producent nodig voor een theatervoorstelling die ik op aan het zetten ben. Wil je een keertje koffie drinken? Groetjes, Charlotte'
 layout: page
+order: 3
 videourl: https://player.vimeo.com/video/236546630?title=0&byline=0&portrait=0&transparent=0&autoplay=0&color=fff
 firstTimer: 307
 firstTitle: 'Bedrijfsoptredens'
