--- a/app/_pages/trouwambtenaar/index.html
+++ b/app/_pages/trouwambtenaar/index.html
@@ -5,8 +5,11 @@ teaserText: Omdat standaard huwelijksceremonies best wat leuker en wat minder st
 summary: Jelle Kuiper is cabaretier en buitengewoon ambtenaar, ook wel BABS hij mag in heel Nederland officieel huwelijken sluiten. Jelle is uitgeroepen tot beste trouwambtenaar van 2014 bij de Dutch Wedding Awards!
 headerimage: /assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-hero.jpg
 formimage: /assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-knuffel-contact.jpg
+subject: 'Bv. Trouwambtenaar Amsterdam'
+message: 'Bv. Hoi Jelle, ik ga trouwen op op 20 Juni. Ben je dan beschikbaar als trouwambtenaar? Groetjes, Laura'
 layout: page
 videourl: https://www.youtube.com/embed/sQZcXToH1CU
+order: 1
 firstTimer: 627
 firstTitle: 'Huwelijk gesloten'
 secondTimer: 10
