--- a/app/_pages/trouwambtenaar/index.html
+++ b/app/_pages/trouwambtenaar/index.html
@@ -6,7 +6,7 @@ summary: Jelle Kuiper is cabaretier en buitengewoon ambtenaar, ook wel BABS hij 
 headerimage: /assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-hero.jpg
 formimage: /assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-knuffel-contact.jpg
 subject: 'Bv. Trouwambtenaar Amsterdam'
-message: 'Bv. Hoi Jelle, ik ga trouwen op op 20 Juni. Ben je dan beschikbaar als trouwambtenaar? Groetjes, Laura'
+message: 'Bv. Hoi Jelle, ik ga trouwen op 20 Juni. Ben je dan beschikbaar als trouwambtenaar? Groetjes, Laura'
 layout: page
 videourl: https://www.youtube.com/embed/sQZcXToH1CU
 order: 1
