standard thumb test

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 title: Jelle Kuiper
 keywords: Trouwambtenaar, Cabaretier, Theaterproducent
 summary: Jelle kan met recht een creatieve duizendpoot worden genoemd. Hij is cabaretier en verzorgt optredens op maat. Hij is officieel trouwambtenaar in heel Nederland. Ook is hij theaterproducent van o.a. de Buurman en Buurman voorstellingen en regisseert hij Stefano Keizers.
-headerimage: /assets/img/jellekuiper.jpg
+headerimage: /assets/thumb/jellekuiper.jpg
 subject: 'Bv. Trouwambtenaar Amsterdam'
 message: 'Bv. Hoi Jelle, ik ga trouwen op 20 Juni. Ben je dan beschikbaar als trouwambtenaar? Groetjes, Laura'
 layout: front
