building new version

--- a/app/_pages/theaterproducties/index.html
+++ b/app/_pages/theaterproducties/index.html
@@ -11,7 +11,7 @@ layout: page
 order: 3
 videourl: https://player.vimeo.com/video/236546630?title=0&byline=0&portrait=0&transparent=0&autoplay=0&color=fff
 firstTimer: 307
-firstTitle: 'Bedrijfsoptredens'
+firstTitle: 'Theaterproducties'
 secondTimer: 95
 secondTitle: 'Fakespeeches'
 permalink: "/theaterproducties/"
