changing the timers

--- a/app/_pages/theaterproducties/index.html
+++ b/app/_pages/theaterproducties/index.html
@@ -10,10 +10,10 @@ message: 'Bv. Hoi Jelle,  ik heb een producent nodig voor een theatervoorstellin
 layout: page
 order: 3
 videourl: https://player.vimeo.com/video/236546630?title=0&byline=0&portrait=0&transparent=0&autoplay=0&color=fff
-firstTimer: 307
+firstTimer: 12
 firstTitle: 'Theaterproducties'
-secondTimer: 95
-secondTitle: 'Fakespeeches'
+secondTimer: 9
+secondTitle: 'Jaar ervaring'
 permalink: "/theaterproducties/"
 
 ---
